Make it build with new automake
Change-Id: I43776536ede739798dea1b85a10e9d7f255697c0

--- a/Makefile.am
+++ b/Makefile.am
@@ -64,7 +64,7 @@ pcfiles = uw-imap-toolkit.pc
 all: 
 all-local: $(pcfiles)
 
-%.pc: %.pc
+SUFFIXES: .pc
 	cp $< $@
 
 pkgconfigdir = $(libdir)/pkgconfig
