--- a/project.config
+++ b/project.config
@@ -1,7 +1,7 @@
 [access "refs/*"]
 	owner = group Administrators
 [access]
-	inheritFrom = domain-messaging
+	inheritFrom = scm/acls/domain_messaging
 [project]
 	state = active
 	description = "Domain: Messaging;"\n\
