--- a/project.config
+++ b/project.config
@@ -3,6 +3,4 @@
 [access]
 	inheritFrom = scm/acls/domain_service_framework/messaging
 [project]
-	description = "Domain: Messaging;"\n\
-"Licenses: Apache-2.0;"\n\
-
+	description = "Domain: Service Framework / Messaging;"
